--- a/src/layouts/colorvars.css
+++ b/src/layouts/colorvars.css
@@ -1,4 +1,7 @@
 :root {
+    /* --primary-color-high: #0A5D80;
+    --primary-color: #0C7CAC; 
+    --primary-color-light: #76CEF4; */
     --primary-color-high: #70A9FF;
     --primary-color: #76cef4; /*70A9FF - >  76CEF4 - >  7BF2EA*/
     --primary-color-tint: #f0f8ff;
@@ -19,6 +22,8 @@
     --border-radius-normal: 6px;
     --header-height: 0 /*50px*/;
     --bottom-nav-height: 50px;
+    --info-color: #0C7CAC; 
+    --info-color-hover: #0A5D80; */
     /**
       for starlight header
     */
@@ -29,11 +34,11 @@
 :root[data-theme='light'] {
     /* for STARLIGHT */
   --sl-color-white:  var(--font-color-dark2);
-  --sl-color-accent-high: var(--primary-color);
-	--sl-color-accent: var(--primary-color);
+  --sl-color-accent-high: var(--info-color);
+	--sl-color-accent: var(--info-color);
 	--sl-color-accent-low: var(--primary-color-tint);
 
-	--sl-color-text: var(--font-color-normal);
+	--sl-color-text: var(--font-color-dark2);
 	--sl-color-text-accent: var(--sl-color-accent-high);
 	--sl-color-text-invert: var(--sl-color-accent-low);
 
@@ -96,11 +101,12 @@
 
   a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--info-color);
   }
 
-  .sidebar-content a {
-    color: var(--font-color-normal);
+  a:hover {
+    text-decoration: none;
+    color: var(--info-color-hover);
   }
 
   a:active,
